--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <body>
     <nav
-      class="navbar sticky-top navbar-expand-lg navbar-light bg-light px-md-5"
+      class="navbar sticky-top navbar-expand-lg navbar-light bg-light px-md-5 py-md-3"
     >
       <a class="navbar-brand" href="index.html">Inicio</a>
       <button
@@ -49,9 +49,6 @@
         <ul id="nav" class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" href="pages/estudios.html">Estudios</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="pages/certificados.html">Certificados</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="pages/experiencia.html">Experiencia</a>
@@ -78,7 +75,7 @@
           <img src="img/SamuelEditReducidaCuadradaRed.png" class="img-fluid col-md-6" />
         </div>
 
-        <div class="col-12 col-md-5 mr-auto mt-4 text-center text-md-left">
+        <div class="col-12 col-md-5 mr-auto mt-5 text-center text-md-left">
           <h1 class="mb-3">Sobre Mí</h1>
           <p>
             Estudiante de Tecnólogo en Análisis y desarrollo de sistemas de
