--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -26,7 +26,7 @@
 
   <body>
     <nav
-      class="navbar sticky-top navbar-expand-lg navbar-light bg-light px-md-5"
+      class="navbar sticky-top navbar-expand-lg navbar-light bg-light px-md-5 py-md-3"
     >
       <a class="navbar-brand" href="../index.html">Inicio</a>
       <button
@@ -50,13 +50,13 @@
             <a class="nav-link" href="estudios.html">Estudios</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="certificados.html">Certificados</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="experiencia.html">Experiencia</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="portafolio.html">Portafolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="cotizaciones/cotizacion.html">Cotización</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contacto.html">Contácto</a>
