--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -66,11 +66,11 @@
     </nav>
 
     <section
-      class="container-fluid bg-beige h-100 d-flex justify-content-center align-items-center"
+      class="container-fluid h-100 d-flex justify-content-center align-items-center"
     >
       <div class="container px-md-5">
-        <div class="row mx-md-5">
-          <div class="col-12 text-center px-md-5 my-4">
+        <div class="row mx-md-5 justify-content-center">
+          <div class="col-12 col-md-10 text-center px-md-5 my-4">
             <h1>Déjame un mensaje</h1>
             <p class="mx-md-5 px-md-5">
               En el caso que desees conversar conmigo, escribeme un correo y me
@@ -78,10 +78,10 @@
             </p>
           </div>
 
-          <div class="col-12 col-md-6 form-group">
+          <div class="col-12 col-md-5 form-group">
             <input class="form-control" type="text" placeholder="Nombre" />
           </div>
-          <div class="col-12 col-md-6 form-group">
+          <div class="col-12 col-md-5 form-group">
             <input
               type="email"
               class="form-control"
@@ -89,10 +89,10 @@
               placeholder="Correo"
             />
           </div>
-          <div class="col-12 form-group">
+          <div class="col-12 col-md-10 form-group">
             <input class="form-control" type="text" placeholder="Asunto" />
           </div>
-          <div class="col-12 form-group">
+          <div class="col-12 col-md-10 form-group">
             <textarea
               class="form-control"
               id="exampleFormControlTextarea1"
@@ -100,7 +100,7 @@
               placeholder="Mensaje"
             ></textarea>
           </div>
-          <div class="col-12 text-center mb-5">
+          <div class="col-12 col-md-10 text-center mb-5">
             <button type="submit" class="btn btn-dark">¡Enviar mensaje!</button>
           </div>
         </div>
@@ -108,7 +108,7 @@
     </section>
 
     <footer>
-      <section class="container">
+      <section class="container-fluid bg-light">
         <div
           class="row py-4 justify-content-center align-items-center text-center"
         >
@@ -126,7 +126,8 @@
               target="_blank"
             >
               <img
-                style="width: 3%"
+              class="mr-3"
+                style="width: 2%"
                 src="../img/footer/facebook-f-brands.svg"
                 alt=""
             /></a>
@@ -135,24 +136,24 @@
               target="_blank"
             >
               <img
-                class="mx-3"
-                style="width: 5%"
+                class="mr-3"
+                style="width: 4%"
                 src="../img/footer/linkedin-in-brands.svg"
                 alt=""
             /></a>
             <a href="https://github.com/SamuelBuendia" target="_blank">
-              <img
-                style="width: 5%"
-                src="../img/footer/github-brands.svg"
-                alt=""
-            /></a>
+              <img style="width: 4%" src="../img/footer/github-brands.svg" class="mr-3" alt="" />
+            </a>
+            <a href="https://wa.link/y6n141" target="_blank">
+              <img style="width: 4%" src="../img/footer/whatsapp-brands.svg" alt=""/>
+            </a>
           </div>
         </div>
       </section>
 
       <div class="container-fluid bg-dark text-light">
         <div class="col-12 d-flex justify-content-center align-items-center">
-          <p class="mt-3">Todos los derechos reservados 2020</p>
+          <p class="mt-3">Todos los derechos reservados 2020 ©</p>
         </div>
       </div>
     </footer>
