--- a/pages/estudios.html
+++ b/pages/estudios.html
@@ -65,82 +65,279 @@
       </div>
     </nav>
 
-    <section class="container-fluid bg-beige">
-      <section class="row align-items-center">
+    <section class="container-fluid">
+      <section class="row align-items-center mb-5">
         <div class="col-12 my-5 text-center">
           <h1>Estudios y Cursos</h1>
         </div>
 
-        <div class="col-12 col-md-4 py-5 text-center">
-          <img
-            src="../img/cursos/coderhouse.jpg"
-            class="img-fluid"
-            style="height: 15vh"
-          />
-          <h2 class="mt-1 mb-2">Coder House</h2>
-          <h4>Desarrollo Web</h4>
-          <p>14/10/2020 - 16/12/2020</p>
+        <div class="col-12 col-md-6 py-5 text-center">
+          <div class="row">
+            <div class="col-12 col-md-auto ml-auto d-flex justify-content-center align-items-center justify-content-md-end mb-3 mb-md-0">
+              <img
+              src="../img/cursos/logoSena.jpg"
+              class="img-fluid"
+              style="height: 20vh"
+            />
+            </div>
+
+            <div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-center">
+              <h2 class="mt-1 mb-2">Sena</h2>
+              <h4>Tecnólogo en Análisis y Desarrollo de Sistemas de Información</h4>
+              <p>13/04/2020 - 12/04/2022</p>
+            </div>
+          </div>
         </div>
 
-        <div class="col-12 col-md-4 py-5 text-center">
-          <img
-            src="../img/cursos/logoSena.jpg"
-            class="img-fluid"
-            style="height: 15vh"
-          />
-          <h2 class="mt-1 mb-2">Sena</h2>
-          <h4>Técnico Programador de Software</h4>
-          <p>01/04/2018 - 15/04/2020</p>
+        <div class="col-12 col-md-6 py-5 text-center">
+          <div class="row">
+            <div class="col-12 col-md-auto d-flex justify-content-center align-items-center justify-content-md-end mb-3 mb-md-0">
+              <img
+              src="../img/cursos/coderhouse.jpg"
+              class="img-fluid"
+              style="height: 20vh"
+            />
+            </div>
+
+            <div class="col-12 col-md-6 mr-auto d-flex flex-column justify-content-center align-items-center">
+              <h2 class="mt-1 mb-2">Coder House</h2>
+              <h4>Javascript</h4>
+              <p>04/01/2021 - 01/03/2021</p>
+            </div>
+          </div>
         </div>
 
-        <div class="col-12 col-md-4 py-5 text-center">
-          <img
-            src="../img/cursos/platzi.jpg"
-            class="img-fluid"
-            style="height: 15vh"
-          />
-          <h2 class="mt-1 mb-2">Platzi</h2>
-          <h4>Programación Básica</h4>
-          <p>26/12/2019</p>
+        <div class="col-12 col-md-6 py-5 text-center">
+          <div class="row">
+            <div class="col-12 col-md-auto ml-auto d-flex justify-content-center align-items-center justify-content-md-end mb-3 mb-md-0">
+              <img
+              src="../img/cursos/coderhouse.jpg"
+              class="img-fluid"
+              style="height: 20vh"
+            />
+            </div>
+
+            <div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-center">
+              <h2 class="mt-1 mb-2">Coder House</h2>
+              <h4>Desarrollo Web</h4>
+              <p>14/10/2020 - 16/12/2020</p>
+            </div>
+          </div>
         </div>
 
-        <div class="col-12 col-md-4 py-5 text-center">
-          <img
-            src="../img/cursos/platzi.jpg"
-            class="img-fluid"
-            style="height: 15vh"
-          />
-          <h2 class="mt-1 mb-2">Platzi</h2>
-          <h4>Git y GitHub</h4>
-          <p>19/10/2019</p>
+        <div class="col-12 col-md-6 py-5 text-center">
+          <div class="row">
+            <div class="col-12 col-md-auto d-flex justify-content-center align-items-center justify-content-md-end mb-3 mb-md-0">
+              <img
+              src="../img/cursos/logoSena.jpg"
+              class="img-fluid"
+              style="height: 20vh"
+            />
+            </div>
+
+            <div class="col-12 col-md-6 mr-auto d-flex flex-column justify-content-center align-items-center">
+              <h2 class="mt-1 mb-2">Sena</h2>
+              <h4>Técnico Programador de Software</h4>
+              <p>01/04/2018 - 15/04/2020</p>
+            </div>
+          </div>
         </div>
 
-        <div class="col-12 col-md-4 py-5 text-center">
-          <img
-            src="../img/cursos/platzi.jpg"
-            class="img-fluid"
-            style="height: 15vh"
-          />
-          <h2 class="mt-1 mb-2">Platzi</h2>
-          <h4>Fundamentos Ing. Software</h4>
-          <p>26/01/2019</p>
+        <div class="col-12 col-md-6 py-5 text-center">
+          <div class="row">
+            <div class="col-12 col-md-auto ml-auto d-flex justify-content-center align-items-center justify-content-md-end mb-3 mb-md-0">
+              <img
+              src="../img/cursos/platzi.jpg"
+              class="img-fluid"
+              style="height: 20vh"
+            />
+            </div>
+
+            <div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-center">
+              <h2 class="mt-1 mb-2">Platzi</h2>
+              <h4>Programación Básica</h4>
+              <p>26/12/2019</p>
+            </div>
+          </div>
         </div>
 
-        <div class="col-12 col-md-4 py-5 text-center">
-          <img
-            src="../img/cursos/platzi.jpg"
-            class="img-fluid"
-            style="height: 15vh"
-          />
-          <h2 class="mt-1 mb-2">Platzi</h2>
-          <h4>Marketing voz a voz</h4>
-          <p>25/10/2018</p>
+        <div class="col-12 col-md-6 py-5 text-center">
+          <div class="row">
+            <div class="col-12 col-md-auto d-flex justify-content-center align-items-center justify-content-md-end mb-3 mb-md-0">
+              <img
+              src="../img/cursos/platzi.jpg"
+              class="img-fluid"
+              style="height: 20vh"
+            />
+            </div>
+
+            <div class="col-12 col-md-6 mr-auto d-flex flex-column justify-content-center align-items-center">
+              <h2 class="mt-1 mb-2">Platzi</h2>
+              <h4>Git y GitHub</h4>
+              <p>19/10/2019</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-6 py-5 text-center">
+          <div class="row">
+            <div class="col-12 col-md-auto ml-auto d-flex justify-content-center align-items-center justify-content-md-end mb-3 mb-md-0">
+              <img
+              src="../img/cursos/platzi.jpg"
+              class="img-fluid"
+              style="height: 20vh"
+            />
+            </div>
+
+            <div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-center">
+              <h2 class="mt-1 mb-2">Platzi</h2>
+              <h4>Fundamentos Ing. Software</h4>
+              <p>26/01/2019</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-6 py-5 text-center">
+          <div class="row">
+            <div class="col-12 col-md-auto d-flex justify-content-center align-items-center justify-content-md-end mb-3 mb-md-0">
+              <img
+              src="../img/cursos/platzi.jpg"
+              class="img-fluid"
+              style="height: 20vh"
+            />
+            </div>
+
+            <div class="col-12 col-md-6 mr-auto d-flex flex-column justify-content-center align-items-center">
+              <h2 class="mt-1 mb-2">Platzi</h2>
+              <h4>Marketing voz a voz</h4>
+              <p>25/10/2018</p>
+            </div>
+          </div>
         </div>
       </section>
     </section>
 
+    <section class="bg-beige">
+      <div
+        id="carouselExampleControls"
+        class="carousel slide"
+        data-ride="carousel"
+      >
+        <div class="carousel-inner py-5">
+          <div class="carousel-item active">
+            <img
+              src="../img/certificados/DiplomaFundamentosIngSoftware.jpg"
+              class="w-40 mx-auto h-60 d-none d-sm-block"
+              alt="..."
+            />
+            <img
+              src="../img/certificados/DiplomaFundamentosIngSoftware.jpg"
+              class="w-100 d-block d-sm-none"
+              alt="..."
+            />
+          </div>
+
+          <div class="carousel-item">
+            <img
+              src="../img/certificados/DiplomaProgBasica.jpg"
+              class="w-40 mx-auto h-60 d-none d-sm-block"
+              alt="..."
+            />
+            <img
+              src="../img/certificados/DiplomaProgBasica.jpg"
+              class="w-100 d-block d-sm-none"
+              alt="..."
+            />
+          </div>
+
+          <div class="carousel-item">
+            <img
+              src="../img/certificados/DiplomaGit.jpg"
+              class="w-40 mx-auto h-60 d-none d-sm-block"
+              alt="..."
+            />
+            <img
+              src="../img/certificados/DiplomaGit.jpg"
+              class="w-100 d-block d-sm-none"
+              alt="..."
+            />
+          </div>
+
+          <div class="carousel-item">
+            <img
+              src="../img/certificados/DiplomaMarketing.jpg"
+              class="w-40 mx-auto h-60 d-none d-sm-block"
+              alt="..."
+            />
+            <img
+              src="../img/certificados/DiplomaMarketing.jpg"
+              class="w-100 d-block d-sm-none"
+              alt="..."
+            />
+          </div>
+
+          <div class="carousel-item">
+            <img
+              src="../img/certificados/CoderDesarrolloWeb.jpg"
+              class="w-40 mx-auto h-60 d-none d-sm-block"
+              alt="..."
+            />
+            <img
+              src="../img/certificados/CoderDesarrolloWeb.jpg"
+              class="w-100 d-block d-sm-none"
+              alt="..."
+            />
+          </div>
+
+          <div class="carousel-item">
+            <img
+              src="../img/certificados/DiplomaProgUdemy.jpg"
+              class="w-40 mx-auto h-60 d-none d-sm-block"
+              alt="..."
+            />
+            <img
+              src="../img/certificados/DiplomaProgUdemy.jpg"
+              class="w-100 d-block d-sm-none"
+              alt="..."
+            />
+          </div>
+
+          <div class="carousel-item">
+            <img
+              src="../img/certificados/TecnicoSena.jpg"
+              class="w-20 mx-auto h-60 d-none d-sm-block"
+              alt="..."
+            />
+            <img
+              src="../img/certificados/TecnicoSena.jpg"
+              class="w-100 d-block d-sm-none"
+              alt="..."
+            />
+          </div>
+        </div>
+        <a
+          class="carousel-control-prev"
+          href="#carouselExampleControls"
+          role="button"
+          data-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a
+          class="carousel-control-next"
+          href="#carouselExampleControls"
+          role="button"
+          data-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </section>
+
     <footer>
-      <section class="container">
+      <section class="container-fluid bg-light">
         <div
           class="row py-4 justify-content-center align-items-center text-center"
         >
@@ -158,7 +355,8 @@
               target="_blank"
             >
               <img
-                style="width: 3%"
+              class="mr-3"
+                style="width: 2%"
                 src="../img/footer/facebook-f-brands.svg"
                 alt=""
             /></a>
@@ -167,24 +365,24 @@
               target="_blank"
             >
               <img
-                class="mx-3"
-                style="width: 5%"
+                class="mr-3"
+                style="width: 4%"
                 src="../img/footer/linkedin-in-brands.svg"
                 alt=""
             /></a>
             <a href="https://github.com/SamuelBuendia" target="_blank">
-              <img
-                style="width: 5%"
-                src="../img/footer/github-brands.svg"
-                alt=""
-            /></a>
+              <img style="width: 4%" src="../img/footer/github-brands.svg" class="mr-3" alt="" />
+            </a>
+            <a href="https://wa.link/y6n141" target="_blank">
+              <img style="width: 4%" src="../img/footer/whatsapp-brands.svg" alt=""/>
+            </a>
           </div>
         </div>
       </section>
 
       <div class="container-fluid bg-dark text-light">
         <div class="col-12 d-flex justify-content-center align-items-center">
-          <p class="mt-3">Todos los derechos reservados 2020</p>
+          <p class="mt-3">Todos los derechos reservados 2020 ©</p>
         </div>
       </div>
     </footer>
