--- a/pages/experiencia.html
+++ b/pages/experiencia.html
@@ -65,7 +65,7 @@
       </div>
     </nav>
 
-    <section class="container-fluid bg-beige">
+    <section class="container-fluid mb-md-5">
       <div class="container">
         <section class="row align-items-center">
           <section class="col-12 my-5 text-center">
@@ -108,7 +108,7 @@
                 <p>15/10/2018 - 03/10/2020</p>
               </div>
               <p>
-                - Asistencia en desarrollo Frontend con Angular - Asistencia en
+                Asistencia en desarrollo Frontend con Angular - Asistencia en
                 desarrollo Backend con Laravel - Asistir en el desarrollo de
                 software de acuerdo con los requerimientos, necesidades y
                 procedimientos de la compañía. - Cumplir con las entregas según
@@ -150,7 +150,7 @@
     </section>
 
     <footer>
-      <section class="container">
+      <section class="container-fluid bg-light">
         <div
           class="row py-4 justify-content-center align-items-center text-center"
         >
@@ -168,7 +168,8 @@
               target="_blank"
             >
               <img
-                style="width: 3%"
+              class="mr-3"
+                style="width: 2%"
                 src="../img/footer/facebook-f-brands.svg"
                 alt=""
             /></a>
@@ -177,24 +178,24 @@
               target="_blank"
             >
               <img
-                class="mx-3"
-                style="width: 5%"
+                class="mr-3"
+                style="width: 4%"
                 src="../img/footer/linkedin-in-brands.svg"
                 alt=""
             /></a>
             <a href="https://github.com/SamuelBuendia" target="_blank">
-              <img
-                style="width: 5%"
-                src="../img/footer/github-brands.svg"
-                alt=""
-            /></a>
+              <img style="width: 4%" src="../img/footer/github-brands.svg" class="mr-3" alt="" />
+            </a>
+            <a href="https://wa.link/y6n141" target="_blank">
+              <img style="width: 4%" src="../img/footer/whatsapp-brands.svg" alt=""/>
+            </a>
           </div>
         </div>
       </section>
 
       <div class="container-fluid bg-dark text-light">
         <div class="col-12 d-flex justify-content-center align-items-center">
-          <p class="mt-3">Todos los derechos reservados 2020</p>
+          <p class="mt-3">Todos los derechos reservados 2020 ©</p>
         </div>
       </div>
     </footer>
