--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -68,7 +68,7 @@
       </div>
     </nav>
 
-    <section class="container-fluid bg-beige">
+    <section class="container-fluid">
       <section class="row align-items-center border-bottom">
         <div class="col-12 text-center my-5">
           <h1>Portafolio</h1>
@@ -169,7 +169,7 @@
     </section>
 
     <footer>
-      <section class="container">
+      <section class="container-fluid bg-light">
         <div
           class="row py-4 justify-content-center align-items-center text-center"
         >
@@ -187,7 +187,8 @@
               target="_blank"
             >
               <img
-                style="width: 3%"
+              class="mr-3"
+                style="width: 2%"
                 src="../img/footer/facebook-f-brands.svg"
                 alt=""
             /></a>
@@ -196,24 +197,24 @@
               target="_blank"
             >
               <img
-                class="mx-3"
-                style="width: 5%"
+                class="mr-3"
+                style="width: 4%"
                 src="../img/footer/linkedin-in-brands.svg"
                 alt=""
             /></a>
             <a href="https://github.com/SamuelBuendia" target="_blank">
-              <img
-                style="width: 5%"
-                src="../img/footer/github-brands.svg"
-                alt=""
-            /></a>
+              <img style="width: 4%" src="../img/footer/github-brands.svg" class="mr-3" alt="" />
+            </a>
+            <a href="https://wa.link/y6n141" target="_blank">
+              <img style="width: 4%" src="../img/footer/whatsapp-brands.svg" alt=""/>
+            </a>
           </div>
         </div>
       </section>
 
       <div class="container-fluid bg-dark text-light">
         <div class="col-12 d-flex justify-content-center align-items-center">
-          <p class="mt-3">Todos los derechos reservados 2020</p>
+          <p class="mt-3">Todos los derechos reservados 2020 ©</p>
         </div>
       </div>
     </footer>
