--- a/pages/estudios.html
+++ b/pages/estudios.html
@@ -71,13 +71,13 @@
           <h1>Estudios y Cursos</h1>
         </div>
 
-        <div class="col-12 col-md-6 py-5 text-center">
+        <div class="col-12 col-md-6 py-3 py-md-5 text-center">
           <div class="row">
-            <div class="col-12 col-md-auto ml-auto d-flex justify-content-center align-items-center justify-content-md-end mb-3 mb-md-0">
+            <div class="col-12 col-md-auto ml-auto d-flex justify-content-center align-items-center justify-content-md-end mb-2 mb-md-0">
               <img
               src="../img/cursos/logoSena.jpg"
               class="img-fluid"
-              style="height: 20vh"
+              style="height: 18vh"
             />
             </div>
 
@@ -89,13 +89,13 @@
           </div>
         </div>
 
-        <div class="col-12 col-md-6 py-5 text-center">
+        <div class="col-12 col-md-6 py-3 py-md-5 text-center">
           <div class="row">
-            <div class="col-12 col-md-auto d-flex justify-content-center align-items-center justify-content-md-end mb-3 mb-md-0">
+            <div class="col-12 col-md-auto d-flex justify-content-center align-items-center justify-content-md-end mb-2 mb-md-0">
               <img
               src="../img/cursos/coderhouse.jpg"
               class="img-fluid"
-              style="height: 20vh"
+              style="height: 18vh"
             />
             </div>
 
@@ -107,13 +107,13 @@
           </div>
         </div>
 
-        <div class="col-12 col-md-6 py-5 text-center">
+        <div class="col-12 col-md-6 py-3 py-md-5 text-center">
           <div class="row">
-            <div class="col-12 col-md-auto ml-auto d-flex justify-content-center align-items-center justify-content-md-end mb-3 mb-md-0">
+            <div class="col-12 col-md-auto ml-auto d-flex justify-content-center align-items-center justify-content-md-end mb-2 mb-md-0">
               <img
               src="../img/cursos/coderhouse.jpg"
               class="img-fluid"
-              style="height: 20vh"
+              style="height: 18vh"
             />
             </div>
 
@@ -125,13 +125,13 @@
           </div>
         </div>
 
-        <div class="col-12 col-md-6 py-5 text-center">
+        <div class="col-12 col-md-6 py-3 py-md-5 text-center">
           <div class="row">
-            <div class="col-12 col-md-auto d-flex justify-content-center align-items-center justify-content-md-end mb-3 mb-md-0">
+            <div class="col-12 col-md-auto d-flex justify-content-center align-items-center justify-content-md-end mb-2 mb-md-0">
               <img
               src="../img/cursos/logoSena.jpg"
               class="img-fluid"
-              style="height: 20vh"
+              style="height: 18vh"
             />
             </div>
 
@@ -143,13 +143,13 @@
           </div>
         </div>
 
-        <div class="col-12 col-md-6 py-5 text-center">
+        <div class="col-12 col-md-6 py-3 py-md-5 text-center">
           <div class="row">
-            <div class="col-12 col-md-auto ml-auto d-flex justify-content-center align-items-center justify-content-md-end mb-3 mb-md-0">
+            <div class="col-12 col-md-auto ml-auto d-flex justify-content-center align-items-center justify-content-md-end mb-2 mb-md-0">
               <img
               src="../img/cursos/platzi.jpg"
               class="img-fluid"
-              style="height: 20vh"
+              style="height: 18vh"
             />
             </div>
 
@@ -161,13 +161,13 @@
           </div>
         </div>
 
-        <div class="col-12 col-md-6 py-5 text-center">
+        <div class="col-12 col-md-6 py-3 py-md-5 text-center">
           <div class="row">
-            <div class="col-12 col-md-auto d-flex justify-content-center align-items-center justify-content-md-end mb-3 mb-md-0">
+            <div class="col-12 col-md-auto d-flex justify-content-center align-items-center justify-content-md-end mb-2 mb-md-0">
               <img
               src="../img/cursos/platzi.jpg"
               class="img-fluid"
-              style="height: 20vh"
+              style="height: 18vh"
             />
             </div>
 
@@ -179,13 +179,13 @@
           </div>
         </div>
 
-        <div class="col-12 col-md-6 py-5 text-center">
+        <div class="col-12 col-md-6 py-3 py-md-5 text-center">
           <div class="row">
-            <div class="col-12 col-md-auto ml-auto d-flex justify-content-center align-items-center justify-content-md-end mb-3 mb-md-0">
+            <div class="col-12 col-md-auto ml-auto d-flex justify-content-center align-items-center justify-content-md-end mb-2 mb-md-0">
               <img
               src="../img/cursos/platzi.jpg"
               class="img-fluid"
-              style="height: 20vh"
+              style="height: 18vh"
             />
             </div>
 
@@ -197,13 +197,13 @@
           </div>
         </div>
 
-        <div class="col-12 col-md-6 py-5 text-center">
+        <div class="col-12 col-md-6 py-3 py-md-5 text-center">
           <div class="row">
-            <div class="col-12 col-md-auto d-flex justify-content-center align-items-center justify-content-md-end mb-3 mb-md-0">
+            <div class="col-12 col-md-auto d-flex justify-content-center align-items-center justify-content-md-end mb-2 mb-md-0">
               <img
               src="../img/cursos/platzi.jpg"
               class="img-fluid"
-              style="height: 20vh"
+              style="height: 18vh"
             />
             </div>
 
