feat: change title

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Samuel Buendía</title>
     <meta charset="UTF-8" />
+    <meta name="description" content="Pagina Web Samuel Buendia" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Presentación de Samuel Buendía" />
 
     <link
       rel="stylesheet"
@@ -22,7 +23,6 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="css/stylesheet.css" />
-    <title>Samuel Buendía</title>
   </head>
 
   <body>
@@ -70,9 +70,9 @@
       <section class="row align-items-center minh-80vh h-auto">
         <div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-center">
           <div class="typewriter">
-            <h1 class="mb-4 text-center">Samuel Buendía</h1>
+            <h2 class="mb-4 text-center">Samuel Buendía</h2>
           </div>
-          <img src="img/SamuelEditReducidaCuadradaRed.png" class="img-fluid col-md-6" />
+          <img src="img/SamuelEditReducidaCuadradaRed.png" class="img-fluid col-md-6"  alt="Foto Samuel Buendia" />
         </div>
 
         <div class="col-12 col-md-5 mr-auto mt-5 text-center text-md-left">
